# MemoryBread

./: .claude-memory.md  .gitignore  AGENTS.md  AX_CACHE_OPTIMIZATION.md  AX_OPTIMIZATION_COMPLETE.md  AX_PERFORMANCE_TRUTH.md  AX_TIMEOUT_ROOT_CAUSE.md  AX_UNIVERSAL_ANALYSIS.md  CLAUDE.md  CREATION_FEATURE.md  DESIGN_GUIDELINES.md  FINAL_AX_SOLUTION.md  FINAL_CONCLUSION.md  FINAL_CONCLUSION_AX_OCR.md  PRIVACY_FIX_REPORT.md  PRIVACY_MODULE_COMPLETE.md  PRIVACY_MODULE_IMPLEMENTATION.md  PRIVACY_MODULE_README.md  PRIVACY_STATS_COMPLETE.md  README.md  REEVALUATION.md  REFACTORING_SUMMARY.md  ROOT_CAUSE_ANALYSIS.md  STABILITY_DIAGNOSIS.md  STABILITY_FIX_COMPLETE.md  VSCODE_AX_TRUTH.md  VSCODE_OCR_SOLUTION.md  apply_stability_fix.sh  debug_ollama_format.py  fix_fts_tokenizer.sql  start.sh  test_creation_length.py  test_daily_report.py  test_memory_pressure.sh  test_ollama_direct.py  test_privacy_filter.py  test_work_item_extraction.py  verify_modifications.sh
.claude/: diagnosis_episodic_memory_work_item.md  episodic_memory_generation_diagnosis.md  merge_window_optimization.md  (+12 more)
desktop-ui/src-tauri/: Cargo.toml  Entitlements.appstore.plist.in  Info.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.direct.conf.json
desktop-ui/src-tauri/capabilities/: default.json
desktop-ui/src-tauri/icons/: icon.icns  icon.png.base64  tray-template.rgba
desktop-ui/src-tauri/icons/android/values/: ic_launcher_background.xml
desktop-ui/src-tauri/icons/legacy/2026-07-19-pre-l4/: README.md
desktop-ui/src-tauri/icons/source/: README.md
desktop-ui/src-tauri/src/: lib.rs  main.rs
(+361 files in other folders)
