[package]
name = "memory-bread-desktop"
version = "0.1.0"
description = "记忆面包 Desktop Application"
authors = ["记忆面包 Team"]
edition = "2021"

[lib]
name = "memory_bread_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
uuid = { version = "1", features = ["v4"] }
xcap = "0.8"
base64 = "0.22"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSResponder", "NSTrackingArea", "NSView", "NSWindow"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"
